welcome.lessons.welcome.array.array123.Array123.scala.error
array123:1: error: Missing closing brace `}' assumed here
def array123(nums:Array[Int]): Boolean = {
^